Editar encuestas seroprevalencia, encuesta participante, encuesta lactancia materna, encuesta peso talla y encuesat datos parto bb. * Corrección bug Recursive entry to executePendingTransactions * Corrección bug en encuesta participante, peso talla y datos parto bb.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -137,6 +137,20 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarTelefonoContactoActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarEncuestaCasaActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.seroprevalencia.activities.editdata.EditarEncuestaCasaSAActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarEncuestaPesoTallaActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarEncuestaDatosPartoBBActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarEncuestaLactanciaMatActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.seroprevalencia.activities.editdata.EditarEncuestaParticipanteSAActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarEncuestaParticipanteActivity"
+                  android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.server.UploadAllActivity"
             android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.server.UploadTamizajesActivity"
