-Descargar procesos -Si es familia, validar que casa_chf sea !=null o no vacia -En volumen chf //De 2 años - < 13 Años pasó a //De 2 años - < 14 Años

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -234,6 +234,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.DownloadBaseActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.DownloadProcessesActivity"
+                  android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.ListBHCsActivity"
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.ListRojosActivity"
