Retoma de muestra y consentimiento seroprevalencia

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -310,7 +310,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.NewTamizajeActivity"
                   android:screenOrientation="portrait" />
-
+        <activity android:name="ni.org.ics.estudios.appmovil.seroprevalencia.activities.NuevoConsentimientoSAActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
