Reconsentimiento dengue 2018. Extensión de Edad

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -312,6 +312,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.seroprevalencia.activities.NuevoConsentimientoSAActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.NewReconDengue2018Activity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
